--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch",
     "babel-node": "babel-node",
     "flow": "flow",
     "flow-typed": "flow-typed",
